# funky

./: .travis.yml  Makefile  README.md  funky.cabal  simple-expr.cabal
Control/: Funky.hs
Control/Funky/: Compile.hs  Compiler.hs  Instruction.hs  Machine.hs  Run.hs  Translate.hs  Type.hs
Control/Funky/Compiler/: Instances.hs
Funky/: Instruction.hs  Machine.hs
attic/: gadt.hs  tctest.hs  tfcurry.hs  th.hs  uncurryAp.hs  uncurryAp2.hs  uncurryAp3.hs
test/: ArithSpec.hs  doctests.hs
