name:                funky
version:             0.1.0.0
synopsis:            Simple Library for Representing and Manipulating Analytic Expressions
description:         Funky 
homepage:            https://github.com/nushio3/funky
license:             BSD3
license-file:        LICENSE
author:              TakayukiMuranushi
maintainer:          muranushi@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Funky.Machine  

  -- other-modules:       
  build-depends:     base ==4.*
                   , containers >= 0.5
                   , vector >= 0.10

