name:                funky
version:             0.1.0.0
synopsis:            Simple Library for Representing and Manipulating Analytic Expressions
description:         Funky 
homepage:            https://github.com/nushio3/funky
license:             BSD3
license-file:        LICENSE
author:              TakayukiMuranushi
maintainer:          muranushi@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Funky.Instruction
                     Funky.Machine  

  -- other-modules:       
  build-depends:     base ==4.*
                   , containers >= 0.5
                   , data-default >= 0.5.3
                   , typelevel-tensor >= 0.2.1
                   , vector >= 0.10

Test-Suite doctests
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Ghc-Options:       -threaded -Wall
  Main-Is:           doctests.hs
  Build-Depends:     base
                   , doctest >= 0.9.3
                   , directory >= 1.2
                   , filepath >= 1.3


Test-Suite spec
  Type:              exitcode-stdio-1.0
  Ghc-Options:       -Wall 
  HS-Source-Dirs:    test
  Main-Is:           spec.hs

  Build-Depends:     base
                   , funky

                   , hspec >= 1.3
                   , HUnit >= 1.2
                   , QuickCheck >= 2.0
                   , vector >= 0.10
